--- a/kernels/generated_kernel/Makefile
+++ b/kernels/generated_kernel/Makefile
@@ -6,7 +6,7 @@ NVCC=nvcc
 
 # Conditional setup based on the target GPU
 NVCCFLAGS=-DNDEBUG -Xcompiler=-fPIE --expt-extended-lambda --expt-relaxed-constexpr -Xcompiler=-Wno-psabi -Xcompiler=-fno-strict-aliasing --use_fast_math -forward-unknown-to-host-compiler -O3  -Xnvlink=--verbose -Xptxas=--verbose -Xptxas=--warn-on-spills -std=c++20 -MD -MT -MF -x cu -lrt -lpthread -ldl -DKITTENS_HOPPER -arch=sm_90a -lcuda -lcudadevrt -lcudart_static -lcublas -I${THUNDERKITTENS_ROOT} # H100
-TARGET=debug_ln 
+TARGET=debug_generated_kernel 
 SRC=generated_kernel.cu
 
 # Default target
